Continued moving useQueries and UseMutations to separate files. Improved code in CartItemService and CartService. From now with every cart items change, total price in cart will be updated. Also when certain product will be deleted from shop, that item will be removed from users carts.